homepage UI + search func

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,7 @@ body {
     Helvetica Neue, sans-serif; */
   font-family: 'Montserrat', sans-serif;
   height: 100%;
+  background-color: #D1D2E4;
 }
 
 a {
